# cordyceps

./: Cargo.toml  README.md
.cargo/: config.toml
crates/pz-lib/: Cargo.toml
crates/pz-lib/src/: parse.rs
src/: assets.rs  lib.rs
src/assets/: recipes.rs  script.rs
