[package]
name = "cordyceps"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }



# Configure development builds for better performance by optimizing dependencies heavily and our code a bit

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
