[package]
name = "cordyceps"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
serde = { version = "1.0.145", features = ["derive"] }

# leafwing-input-manager = "0.8.0"
# bevy_interact_2d = "0.9.0"
# bevy-sequential-actions = "0.6.0"

# Configure development builds for better performance by optimizing dependencies heavily and our code a bit

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
